# UV

./: pyproject.toml
src/first_project/: __init__.py  hello.py
