[project]
name = "first-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ghazia Maqbool", email = "ghaziamaqbool89@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
first-project = "first_project.hello:my_function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
